<resources>
    <string name="app_name">FitApp</string>
    <string name="signupb">Sign Up</string>


    //Description
    <string name="text_one">cevaaaaaaaaaaaa</string>
    <string name="text_two">Bine ai venit</string>
    <string name="text_three">alt text motivational</string>

    //
    <string name="signup">Sign Up</string>
    <string name="login">Log in</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="user_name">User name</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="account">I have an account alredy.</string>
    <string name="enterEmail">Enter your email</string>
    <string name="resetPass">Reset Password</string>
    <string name="home">Home</string>
    <string name="workouts">Workouts</string>
    <string name="water">Water</string>
    <string name="profile">Profile</string>
    <string name="measurements">Measurements</string>
    <string name="personal_info">Personal Info</string>
    <string name="your_name">Your Name</string>
    <string name="age">Age</string>
    <string name="activityLevel">Activity Level</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="bodyFatPercentage">Body Fat Percentage</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sedentary">Sedentary (less than 5.000 steps per day)</string>
    <string name="lightlyActive">Lightly Active (5.000 to 10.000 steps a day)</string>
    <string name="moderatelyActive">Moderately Active (more than 10.000 steps per day)</string>
    <string name="veryActive">Very Active (more than 12.500 per day)</string>
    <string name="set_my_water">Set My Water</string>
    <string name="weather">Weather Type</string>
    <string name="suggested_quantity">Suggested quantity of water</string>
    <string name="default_quantity">Default quantity</string>
    <string name="hot">Hot</string>
    <string name="cold">Cold</string>
    <string name="wakeup">I wake up at</string>
    <string name="go_to_bed">I go to bed at</string>
    <string name="my_weight">My weight is</string>
    <string name="my_water">My Water</string>
    <string name="calculate_water">Calculate</string>
    <string name="alert_setting">Alert Setting</string>
    <string name="notification">Notification On/Off</string>
    <string name="progress">Progress</string>
    <string name="weightProgress">Weight Progress</string>
    <string name="entries">Entries</string>
    <string name="equipment">EQUIPMENT</string>
    <string name="instructions">Instructions</string>
    <string name="neck">Neck</string>
    <string name="waist">Waist</string>
    <string name="hips">Hips</string>
    <string name="current_weight">Current Weight</string>
    <string name="ideal_weight">Your Ideal Weight is</string>
    <string name="weight_range">Normal Weight Range</string>
    <string name="results">Results: </string>
    <string name="bmiText">Your Body Mass Index is </string>
    <string name="bfpText">Your Body Fat Percentage is </string>
    <string name="bfmText">Your Body Fat Mass is </string>
    <string name="lbmText">Your Lean Body Mass is </string>
    <string name="interpretationResults">This is considered </string>
    <string name="essentialFat">Essential fat</string>
    <string name="athletes">Athletes</string>
    <string name="fitness">Fitness</string>
    <string name="average">Average</string>
    <string name="obese">Obese</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="idealMeasurements">Ideal Measurements</string>
    <string name="biologicalAgeCalculator">Biological Age Calculator</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_meas">Meas</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_ideal_measurements">IdealMeasurements</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>