<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient_background"
    android:padding="20dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="75dp"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPassword"
        android:drawablePadding="12dp"
        android:hint="@string/pass"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_check"
        android:inputType="textPassword"
        android:drawablePadding="12dp"
        android:hint="@string/confirm_pass"
        />



    <Button
        android:id="@+id/login_btn"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/signup"
        android:background="@drawable/signup_btn"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/account"
            android:textColor="@color/colorTransparentWhite"

            />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text=" LOG IN"
            android:textSize="16sp"
            android:textColor="@color/white"


            />



    </LinearLayout>

</LinearLayout>