<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    android:gravity="center_horizontal"
    android:padding="20dp"
    >

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="156dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPassword"
        android:drawablePadding="12dp"
        android:hint="@string/pass"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_pass"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:textColor="@color/colorTransparentWhite"

        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/login"
        android:background="@drawable/btn_login"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Don't have an account?"
        android:textColor="@color/colorTransparentWhite"

        />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text=" SIGN UP"
            android:textSize="16sp"
            android:textColor="@color/white"


            />



    </LinearLayout>
</LinearLayout>