<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:orientation="vertical"
    android:id="@+id/container_measurements"
    tools:context=".Measurements">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:background="#121212">

        <TextView
            android:id="@+id/back_personal_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_arrow_back"
            android:layout_marginStart="30dp"
            android:layout_marginTop="42dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measurements"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="#1F1B24">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/date1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/light_gray"
                android:textSize="15sp"
                android:layout_gravity="right"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/weightM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="--"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="kg"
                android:textColor="@color/light_gray"
                android:textSize="15sp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="#1F1B24"
            android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/light_gray"
                android:textSize="15sp"
                android:layout_gravity="right"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                />

        <TextView
            android:id="@+id/heightM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" cm"
            android:textColor="@color/light_gray"
            android:textSize="15sp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="40dp"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="#1F1B24"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bodyFatPercentage"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/date3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/light_gray"
                android:textSize="15sp"
                android:layout_gravity="right"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/body_fatM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="--"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%"
                android:textColor="@color/light_gray"
                android:textSize="15sp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"/>


        </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addBtn"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_marginTop="140dp"
        android:layout_gravity="right"
        app:cornerRadius="70dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="+"
        android:textSize="30sp"
        android:backgroundTint="@color/white"/>

    </LinearLayout>

</LinearLayout>